outputs returned as "file://" urls, direct paths to working directory